--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "*.{css,md}": "prettier --write"
   },
   "dependencies": {
-    "next": "14.0.4",
+    "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18"
   },
