--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
