--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lint-staged": "^15.2.0",
     "postcss": "^8",
     "prettier": "^3.2.4",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "terser-webpack-plugin": "^5.3.10"
   }
 }
